@@ -1,15 +1,19 @@
 -ea
+-server
 -Xms1g
 -Xmx1g
 -Xss16m
 -XX:PermSize=256m
 -XX:MaxPermSize=256m
+-XX:+DoEscapeAnalysis
+-XX:+UseCompressedOops
+-XX:+UnlockExperimentalVMOptions
+-XX:+UseConcMarkSweepGC
 -XX:LargePageSizeInBytes=256m
 -XX:ReservedCodeCacheSize=96m
 -XX:+UseCodeCacheFlushing
 -XX:+UseCompressedOops
 -XX:+UseParNewGC
--XX:ParallelGCThreads=8
 -XX:+UseConcMarkSweepGC
 -XX:+DisableExplicitGC
 -XX:+ExplicitGCInvokesConcurrent
@@ -28,8 +32,7 @@
 -XX:+UseCompressedStrings 
 -XX:+OptimizeStringConcat
 -XX:+UseStringCache 
--XX:+UseFastAccessorMethods 
--XX:+UseLargePages 
--XX:+UnlockDiagnosticVMOptions 
+-XX:+UseFastAccessorMethods  
+-XX:+UnlockDiagnosticVMOptions
 -Dawt.useSystemAAFontSettings=lcd
 -Dswing.aatext=true
